--- a/daniel.org
+++ b/daniel.org
@@ -1,4 +1,3 @@
-
 <<babel-init>>
 
 * User details
@@ -28,7 +27,7 @@
 * Define default packages
 
  #+begin_src emacs-lisp
- (defvar alistair/packages '(ac-slime
+ (defvar daniel/packages '(ac-slime
  			    ac-emmet
  			    ac-etags
  			    achievements
@@ -63,15 +62,15 @@
 * Install default packages
 
  #+begin_src emacs-lisp
- (defun alistair/packages-installed-p ()
-   (loop for pkg in alistair/packages
+ (defun daniel/packages-installed-p ()
+   (loop for pkg in daniel/packages
          when (not (package-installed-p pkg)) do (return nil)
          finally (return t)))
 
- (unless (alistair/packages-installed-p)
+ (unless (daniel/packages-installed-p)
    (message "%s" "Refreshing package database...")
    (package-refresh-contents)
-   (dolist (pkg alistair/packages)
+   (dolist (pkg daniel/packages)
      (when (not (package-installed-p pkg))
        (package-install pkg))))
 #+end_src
@@ -107,7 +106,7 @@
 (global-auto-revert-mode 1)
 
 ;; Highlights current line
-(global-hl-line-mode 1)
+;;(global-hl-line-mode 1)
 
 ;; Disable line-wrap
 (set-default 'truncate-lines t)
@@ -117,9 +116,6 @@
 
 ;; Switch on match bracket
 (show-paren-mode)
-
-;; Highlights current lines
-(global-hl-line-mode 1)
 
 ;; Auto-closing parenthesis
 ;;(electric-pair-mode 1)
@@ -152,20 +148,24 @@
 #+end_src
 ** Backup files
 #+begin_src emacs-lisp
-  ;; puts backup files into temp directory rather than cluttering up file tree
+;; puts backup files into temp directory rather than cluttering up file tree
+;;(setq backup-directory-alist `(("." . ,(concat user-emacs-directory "backups"))))
 
-  ;; (setq backup-directory-alist
-  ;;       `((".*" . ,temporary-file-directory)))
-  ;; (setq auto-save-file-name-transforms
-  ;;       `((".*" ,temporary-file-directory t)))
-
-  (setq backup-directory-alist `(("." . ,(concat user-emacs-directory
-                                                 "backups"))))
-
-  ;; stop emacs creating backup files
-  ;; (setq make-backup-files -1)
+;; stop emacs creating backup files
+(setq make-backup-files nil)
 
 #+end_src
+
+** Auto Save files
+#+begin_src emacs-lisp
+;; puts auto save files into temp directory rather than cluttering up file tree
+;;(setq auto-save-file-name-transforms `((".*", (concat user-emacs-directory "auto-save"))))
+
+;; stop emacs creating auto save files
+(setq auto-save-default nil)
+
+#+end_src
+
 
 * Cua-mode
 
@@ -224,19 +224,19 @@
 * Auto-complete
 
 #+begin_src emacs-lisp
-(setq ac-auto-show-menu 0.01)
-(setq ac-delay 0.01)
+;;(require 'auto-complete-config)
+;;(add-to-list 'ac-dictionary-directories "/home/daniel/.emacs.d/ac-dict")
+;;(ac-config-default)
+;;(ac-flyspell-workaround)
+;;(add-to-list 'ac-modes 'tcl-mode)
+;;(add-to-list 'ac-modes 'lisp-mode)
+;;(add-to-list 'ac-modes 'text-mode)
+;;(add-to-list 'ac-modes 'html-mode)
+;;(add-to-list 'ac-modes 'javascript-mode)
+;;(add-to-list 'ac-modes 'css-mode)
 
-(require 'auto-complete-config)
-(add-to-list 'ac-dictionary-directories "/home/daniel/.emacs.d//ac-dict")
-(ac-config-default)
-(ac-flyspell-workaround)
-(add-to-list 'ac-modes 'tcl-mode)
-(add-to-list 'ac-modes 'lisp-mode)
-(add-to-list 'ac-modes 'text-mode)
-(add-to-list 'ac-modes 'html-mode)
-(add-to-list 'ac-modes 'javascript-mode)
-(add-to-list 'ac-modes 'css-mode)
+;;(setq ac-auto-show-menu 0.00)
+;;(setq ac-delay 0.00)
 #+end_src
 
 * Undo-tree-mode
@@ -502,21 +502,21 @@
 * Global key bindings
 
 #+begin_src emacs-lisp
-(global-set-key (kbd "<f1>") 'multi-term)
-(global-set-key (kbd "<f2>") 'dev-term)
-(global-set-key (kbd "<f3>") 'dev-psql)
-(global-set-key (kbd "<f4>") 'dev-cp)
-(global-set-key (kbd "<f5>") 'er/expand-region)
+;;(global-set-key (kbd "<f1>") 'multi-term)
+;;(global-set-key (kbd "<f2>") 'dev-term)
+;;(global-set-key (kbd "<f3>") 'dev-psql)
+;;(global-set-key (kbd "<f4>") 'dev-cp)
+;;(global-set-key (kbd "<f5>") 'er/expand-region)
 ;; (global-set-key (kbd "<f6>") ')
-(global-set-key (kbd "<f7>") (lambda() (interactive)(find-file "~/.emacs.d/alistair.org"))) ;; Open config file
+(global-set-key (kbd "<f7>") (lambda() (interactive)(find-file "~/.emacs.d/daniel.org"))) ;; Open config file
 (global-set-key (kbd "<f8>") 'reload-config)
 ;; (global-set-key (kbd "<f9>") ')
 ;; (global-set-key (kbd "<f10>") ')
 ;; (global-set-key (kbd "<f11>") ')
 ;; (global-set-key (kbd "<f12>") ')
 
-(global-set-key (kbd "C-<f1>") 'tags-search)
-(global-set-key (kbd "C-<f2>") 'tags-query-replace)
+;;(global-set-key (kbd "C-<f1>") 'tags-search)
+;;(global-set-key (kbd "C-<f2>") 'tags-query-replace)
 ;; (global-set-key (kbd "<C-f3>") ')
 ;; (global-set-key (kbd "<C-f4>") ')
 ;; (global-set-key (kbd "<C-f5>") ')
@@ -540,47 +540,39 @@
 ;; (global-set-key (kbd "<M-f11>") ')
 ;; (global-set-key (kbd "<M-f12>") ')
 
-(global-set-key (kbd "C-o") 'other-window)
-(global-set-key (kbd "C-s") 'isearch-forward-regexp)
-(global-set-key (kbd "C-r") 'isearch-backward-regexp)
+;;(global-set-key (kbd "C-o") 'other-window)
+;;(global-set-key (kbd "C-s") 'isearch-forward-regexp)
+;;(global-set-key (kbd "C-r") 'isearch-backward-regexp)
 (global-set-key (kbd "C-M-s") 'isearch-forward)
 (global-set-key (kbd "C-M-r") 'isearch-backward)
 
-(global-set-key (kbd "M-/") 'hippie-expand)
+;;(global-set-key (kbd "M-/") 'hippie-expand)
 (global-set-key (kbd "C-x C-b") 'ibuffer)
-(global-set-key (kbd "M-z") 'zap-up-to-char)
+;;(global-set-key (kbd "M-z") 'zap-up-to-char)
 
-(global-set-key (kbd "C-n") 'new-empty-buffer)
+;;(global-set-key (kbd "C-n") 'new-empty-buffer)
 
 ;; shortcut to skip to next/previous buffer
 (global-set-key (kbd "M-]") 'next-buffer)
 (global-set-key (kbd "M-[") 'previous-buffer)
 
 ;; Easier jumping between frames
-(global-set-key (kbd "C-o") 'other-window)
+;;(global-set-key (kbd "C-o") 'other-window)
 
 #+end_src
 
 *** font scaling
 
 #+begin_src emacs-lisp
-(global-set-key (kbd "M-=") 'text-scale-increase)
-(global-set-key (kbd "M--") 'text-scale-decrease)
+;;(global-set-key (kbd "M-=") 'text-scale-increase)
+;;(global-set-key (kbd "M--") 'text-scale-decrease)
 #+end_src
 
 *** etags search
 
 #+begin_src emacs-lisp
-(global-set-key (kbd "A-s") 'tags-search)
-(global-set-key (kbd "A-f") 'tags-query-replace)
-#+end_src
-
-*** Pinched from better-defaults - to review...
-
-#+begin_src emacs-lisp
-(global-set-key (kbd "M-/") 'hippie-expand)
-(global-set-key (kbd "C-x C-b") 'ibuffer)
-(global-set-key (kbd "M-z") 'zap-up-to-char)
+;;(global-set-key (kbd "A-s") 'tags-search)
+;;(global-set-key (kbd "A-f") 'tags-query-replace)
 #+end_src
 
 *** Searching
@@ -609,15 +601,15 @@
 *** Shortcuts to switch between line and char mode, useful when using ansi-term
 
 #+begin_src emacs-lisp
-(global-set-key (kbd "C-x C-j") 'term-line-mode)
-(global-set-key (kbd "C-x C-j") 'term-char-mode)
+;;(global-set-key (kbd "C-x C-j") 'term-line-mode)
+;;(global-set-key (kbd "C-x C-j") 'term-char-mode)
 #+end_src
 
 *** Other...
 #+begin_src emacs-lisp
 ;; shortcut for ispell-buffer & flyspell
-(global-set-key (kbd "C-x C-#") 'ispell-buffer)
-(global-set-key (kbd "C-x #") 'flyspell-buffer)
+;;(global-set-key (kbd "C-x C-#") 'ispell-buffer)
+;;(global-set-key (kbd "C-x #") 'flyspell-buffer)
 
 ;; shortcut for find tag
 (global-set-key (kbd "M-.") 'find-tag)
@@ -637,8 +629,8 @@
 (key-chord-mode 1)
 
 ;; examples...
-(key-chord-define-global "hj"     'undo)
-(key-chord-define-global ",."     "<>\C-b")
+;;(key-chord-define-global "hj"     'undo)
+;;(key-chord-define-global ",."     "<>\C-b")
 
 #+end_src
 
@@ -752,5 +744,8 @@ Unsorted stuff dumped in from my existing .emacs file
   ;; Split window and switch focus to new window
   (global-set-key "\C-x2" (lambda () (interactive)(split-window-vertically) (other-window 1)))
   (global-set-key "\C-x3" (lambda () (interactive)(split-window-horizontally) (other-window 1)))
+
+ ;; Disable visible bell as this crashes emacs within an X2GO session
+ (setq visible-bell nil)
 
 #+end_src
