--- a/daniel.org
+++ b/daniel.org
@@ -278,7 +278,7 @@
 (require 'aggressive-indent)
 
 (global-aggressive-indent-mode)
-;;(add-to-list 'aggressive-indent-excluded-modes 'html-mode)
+(add-to-list 'aggressive-indent-excluded-modes 'tcl-mode)
 
 
 ;; disable in term-mode
