--- a/daniel.org
+++ b/daniel.org
@@ -683,8 +683,8 @@ Unsorted stuff dumped in from my existing .emacs file
   (require 'uniquify)
   (setq uniquify-buffer-name-style 'forward)
 
-  (require 'saveplace)
-  (setq-default save-place t)
+  ;;(require 'saveplace)
+  ;;(setq-default save-place t)
 
   (defun reload-config ()
     (interactive)
@@ -692,16 +692,22 @@ Unsorted stuff dumped in from my existing .emacs file
 
   (show-paren-mode 1)
   (setq-default indent-tabs-mode nil)
-  (setq x-select-enable-clipboard t
+
+  (setq x-select-enable-clipboard nil
         x-select-enable-primary t
-        save-interprogram-paste-before-kill t
-        apropos-do-all t
-        mouse-yank-at-point t
-        require-final-newline t
-        visible-bell t
-        ediff-window-setup-function 'ediff-setup-windows-plain
-        save-place-file (concat user-emacs-directory "places")
-  )
+        mouse-drag-copy-region t
+       )
+
+  ;;(setq x-select-enable-clipboard t
+  ;;      x-select-enable-primary t
+  ;;      save-interprogram-paste-before-kill t
+  ;;      apropos-do-all t
+  ;;      mouse-yank-at-point t
+  ;;      require-final-newline t
+  ;;      visible-bell t
+  ;;      ediff-window-setup-function 'ediff-setup-windows-plain
+  ;;      save-place-file (concat user-emacs-directory "places")
+  ;;)
 
   ;; Select lines by click-dragging on the margin.
   (defvar *linum-mdown-line* nil)
