--- a/daniel.org
+++ b/daniel.org
@@ -640,11 +640,12 @@
 #+begin_src emacs-lisp
  (setq x-select-enable-clipboard t
         x-select-enable-primary t
+        x-select-enable-clipboard-manager t
         save-interprogram-paste-before-kill t
         apropos-do-all t
         mouse-yank-at-point t
         mouse-drag-copy-region t
-        x-selection-timeout 50
+        x-selection-timeout 500
        )
 #+end_src
 * TODO
